--- a/ControleDeEstoque/src/main/java/telas/TelaEstoque.form
+++ b/ControleDeEstoque/src/main/java/telas/TelaEstoque.form
@@ -35,6 +35,9 @@
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="title" type="java.lang.String" value="Tela Inicial"/>
+    <Property name="autoRequestFocus" type="boolean" value="false"/>
+    <Property name="focusable" type="boolean" value="false"/>
+    <Property name="focusableWindowState" type="boolean" value="false"/>
     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
       <Color blue="ff" green="ff" id="white" palette="1" red="ff" type="palette"/>
     </Property>
@@ -63,17 +66,6 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Component id="jButton1" alignment="0" max="32767" attributes="0"/>
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
-              <Component id="lblAbrirEstoque" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="32767" attributes="0"/>
-              <Component id="lblAbrirProdutos" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="100" max="-2" attributes="0"/>
-              <Component id="lblAbrirCategorias" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="99" max="-2" attributes="0"/>
-              <Component id="lblAbrirMovimentacoes" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
-          </Group>
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
@@ -143,19 +135,35 @@
                   </Group>
               </Group>
           </Group>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
+              <Component id="lblEstoque" min="-2" pref="37" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="lblAbrirEstoque" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
+              <Component id="lblAbrirProduto" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="100" max="-2" attributes="0"/>
+              <Component id="lblAbrirCategorias" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="76" max="-2" attributes="0"/>
+              <Component id="lblAbrirMovimentacoes" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="lblAbrirEstoque" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="lblAbrirMovimentacoes" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="lblAbrirCategorias" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="lblAbrirProdutos" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="lblAbrirEstoque" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblAbrirMovimentacoes" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblAbrirCategorias" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblAbrirProduto" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Component id="lblEstoque" min="-2" pref="28" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="jButton1" min="-2" pref="23" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
               <Component id="jLabel1" max="32767" attributes="0"/>
@@ -185,9 +193,9 @@
                   <Component id="lblLupa" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
                   <Component id="lblImprimir" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="jScrollPane2" min="-2" pref="226" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="77" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -203,9 +211,6 @@
         </Property>
         <Property name="text" type="java.lang.String" value="MEU ESTOQUE"/>
       </Properties>
-      <Events>
-        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="lblAbrirEstoqueMouseClicked"/>
-      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="lblAbrirMovimentacoes">
       <Properties>
@@ -229,7 +234,7 @@
         <Property name="text" type="java.lang.String" value="CATEGORIAS"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="lblAbrirProdutos">
+    <Component class="javax.swing.JLabel" name="lblAbrirProduto">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="14" style="0"/>
@@ -240,7 +245,7 @@
         <Property name="text" type="java.lang.String" value="PRODUTOS"/>
       </Properties>
       <Events>
-        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="lblAbrirProdutosMouseClicked"/>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="lblAbrirProdutoMouseClicked"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton1">
@@ -408,26 +413,25 @@
             </Property>
           </Properties>
           <AuxValues>
-            <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="jscrollpane.setColumnHeader(null);"/>
+            <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="jScrollPane2.setColumnHeader(null);"/>
           </AuxValues>
         </Component>
       </SubComponents>
     </Container>
     <Component class="javax.swing.JLabel" name="lblLupa">
       <Properties>
-        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="icon" type="code"/>
-        </Property>
         <Property name="text" type="java.lang.String" value="jLabel15"/>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JLabel() ImageIcon icon = new ImageIcon(&quot;src/imagens/lupa.png&quot;)"/>
+        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JLabel()"/>
       </AuxValues>
     </Component>
     <Component class="javax.swing.JLabel" name="lblImprimir">
       <Properties>
         <Property name="text" type="java.lang.String" value="jLabel15"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblEstoque">
     </Component>
   </SubComponents>
 </Form>
